<resources>
    <string name="app_name">Running Tracker</string>
    <string name="sort_by">Sort by:</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="your_name">Your Name</string>
    <string name="your_weight">Your Weight (kg)</string>
    <string name="welcome_nplease_enter_your_name_and_weight">Welcome!\nPlease enter your name and weight.</string>
    <string name="kg">kg</string>
    <string name="continue_">Continue</string>
    <string name="total_distance">Total Distance</string>
    <string name="total_time">Total Time</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="average_speed">Average Speed</string>
    <string name="total_calories_burned">Total Calories Burned</string>
    <string name="_00_00_00_00">00:00:00:00</string>
    <string name="runs">Runs</string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>

    <string name="distance_placeholder">%1$s km</string>
    <string name="calories_placeholder">%1$s kcal</string>
    <string name="speed_placeholder">%1$s km/h</string>
    <string name="setup_toolbar_placeholder">Let\'s go, %1$s</string>
    <string name="time_goal_placeholder">%1$s h</string>
    <string name="pace_placeholder">%1$s h</string>
    <string name="weight_placeholder">%1$s kg</string>
    <string name="profile_name_placeholder">Hello, %1$s!</string>

    <string name="start_run">Start Run</string>
    <string name="finish">Finish Run</string>
    <string name="stop_run">Stop Run</string>
    <string name="pause_run">Pause Run</string>
    <string name="resume_run">Resume Run</string>
    <string name="cancel_run">Cancel Run</string>
    <string name="cancel_run_alert_title">Cancel the Run?</string>

    <string name="cancel_run_alert_desc">Are you sure to cancel the current run and delete all its data?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="saved_run_snackbar">Run saved successfully</string>
    <string name="item_date">DATE</string>
    <string name="item_duration">DURATION</string>
    <string name="item_distance">DISTANCE</string>
    <string name="item_avgspeed">AVG SPEED</string>
    <string name="item_calories">CALORIES BURNED</string>
    <string name="item_speed">SPEED</string>

    <string name="error_save_settings_snackbar_text">Please enter all the fields</string>
    <string name="saved_settings_snackbar_text">Saved changes</string>
    <string name="delete">Delete</string>

    <string name="fab_to_runs_transition_name">fabToRuns</string>
    <string name="info_dialog_title">Why is it necessary?</string>
    <string name="this_week_results">This week results</string>
    <string name="account">Account</string>
    <string name="weight">Weight</string>
    <string name="other">Other</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="run">Run</string>
    <string name="long_press_to_stop">Long press to stop</string>
    <string name="avg_pace">AVG PACE</string>
    <string name="more_data">More Data</string>
    <string name="profile">Profile</string>
    <string name="distance_goal">Distance goal</string>
    <string name="duration_goal">Duration goal</string>
    <string name="save">Save</string>
    <string name="speed_goal">Speed goal</string>
    <string name="burned_calories_goal">Burned calories goal</string>
    <string name="week_goals">Week Goals</string>
    <string name="are_you_sure_title">Are you sure?</string>
    <string name="changes_wont_be_saved">Changes won\'t be saved</string>
    <string name="edit_goals">Edit Goals</string>
    <string name="pace_goal">Pace goal</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="name_email_title">Enter your name and email</string>
    <string name="cancel">Cancel</string>
    <string name="weight_dialog_title">Enter your weight (kg)</string>
    <string name="logout_description">All the data will be cleared without possibility of restore</string>

    <string-array name="filter_options">
        <item>Date</item>
        <item>Running Time</item>
        <item>Distance</item>
        <item>Average Speed</item>
        <item>Calories Burned</item>
    </string-array>
</resources>