<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_large">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/bar_chart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/match_constraint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/avg_speed_info_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_distance_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/avg_speed_info_text_view"
        app:layout_constraintEnd_toEndOf="@+id/total_distance_value_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/total_distance_value_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_distance_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toTopOf="@+id/total_distance_info_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:text="@string/distance_placeholder" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_time_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_time"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/total_calories_info_text_view"
        app:layout_constraintEnd_toEndOf="@+id/total_time_value_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/total_time_value_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_time_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00_00_00"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toTopOf="@+id/total_time_info_text_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_calories_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_calories_burned"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/total_calories_value_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/total_calories_value_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_calories_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toTopOf="@+id/total_calories_info_text_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/calories_placeholder" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/avg_speed_info_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/average_speed"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="@+id/avg_speed_value_text_view"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/avg_speed_value_text_view"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/avg_speed_value_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
        app:layout_constraintBottom_toTopOf="@+id/avg_speed_info_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        tools:text="@string/speed_placeholder" />

</androidx.constraintlayout.widget.ConstraintLayout>