<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <ImageView
        android:id="@+id/run_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/date_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/item_date"
        app:layout_constraintEnd_toStartOf="@+id/time_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/run_image" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/time_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_time"
        app:layout_constraintEnd_toStartOf="@+id/distance_text_view"
        app:layout_constraintStart_toEndOf="@+id/date_text_view"
        app:layout_constraintTop_toTopOf="@id/date_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/distance_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_distance"
        app:layout_constraintEnd_toStartOf="@+id/avg_speed_text_view"
        app:layout_constraintStart_toEndOf="@+id/time_text_view"
        app:layout_constraintTop_toTopOf="@id/date_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/avg_speed_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_avgspeed"
        app:layout_constraintEnd_toStartOf="@+id/calories_text_view"
        app:layout_constraintStart_toEndOf="@+id/distance_text_view"
        app:layout_constraintTop_toTopOf="@id/date_text_view" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/calories_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/item_calories"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/avg_speed_text_view"
        app:layout_constraintTop_toTopOf="@id/date_text_view" />

</androidx.constraintlayout.widget.ConstraintLayout>