<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1">

    <TextView
        android:id="@+id/welcome_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_giant"
        android:text="@string/welcome_nplease_enter_your_name_and_weight"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/HeadlineTextAppearance" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input_layout"
        style="@style/InputLayout"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_giant"
        android:layout_marginTop="@dimen/margin_giant"
        android:layout_marginEnd="@dimen/margin_giant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/your_name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weight_input_layout"
        style="@style/InputLayout"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_large"
        app:endIconContentDescription="Info"
        app:endIconDrawable="@drawable/ic_round_info_24"
        app:endIconMode="custom"
        app:endIconTint="@color/icon_tint"
        app:layout_constraintEnd_toEndOf="@id/name_input_layout"
        app:layout_constraintStart_toStartOf="@+id/name_input_layout"
        app:layout_constraintTop_toBottomOf="@+id/name_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/weight_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:ems="10"
            android:hint="@string/your_weight"
            android:inputType="numberDecimal" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continue_button"
        style="@style/DefaultButton"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/continue_"
        android:textSize="@dimen/text_size_small"
        app:layout_constraintEnd_toEndOf="@id/weight_input_layout"
        app:layout_constraintStart_toStartOf="@id/weight_input_layout"
        app:layout_constraintTop_toBottomOf="@id/weight_input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>