<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24">

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/distance_input_layout"
        style="@style/InputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_giant"
        app:layout_constraintEnd_toStartOf="@id/duration_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/distance_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/distance_goal"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/duration_input_layout"
        style="@style/InputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/distance_input_layout"
        app:layout_constraintTop_toTopOf="@id/distance_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/duration_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration_goal"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/speed_input_layout"
        style="@style/InputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_giant"
        app:layout_constraintEnd_toStartOf="@id/calories_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/speed_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/speed_goal"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/calories_input_layout"
        style="@style/InputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/speed_input_layout"
        app:layout_constraintTop_toTopOf="@id/speed_input_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/calories_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/burned_calories_goal"
            android:inputType="numberSigned" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        style="@style/DefaultButton"
        android:layout_width="@dimen/match_constraint"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginEnd="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_giant"
        android:text="@string/save"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>