<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background1">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_24" />

    <TextView
        style="@style/TitleTextView"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/account_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_giant"
        android:text="@string/account"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <androidx.cardview.widget.CardView
        android:id="@+id/account_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="@dimen/card_view_corner_radius_large"
        app:cardElevation="@dimen/elevation_tiny"
        app:layout_constraintTop_toBottomOf="@id/account_settings_label">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/padding_large">

            <TextView
                android:id="@+id/name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="John Doe"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/email_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="johndoe@gmail.com"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/text_label" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/weight_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/weight"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_settings_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/weight_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="@dimen/card_view_corner_radius_large"
        app:cardElevation="@dimen/elevation_tiny"
        app:layout_constraintTop_toBottomOf="@id/weight_settings_label">

        <TextView
            android:id="@+id/weight_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_large"
            android:text="80kg"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/other_settings_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_large"
        android:text="@string/other"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weight_settings_button" />

    <androidx.cardview.widget.CardView
        android:id="@+id/other_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_large"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_large"
        app:cardBackgroundColor="@color/background2"
        app:cardCornerRadius="@dimen/card_view_corner_radius_large"
        app:cardElevation="@dimen/elevation_tiny"
        app:layout_constraintTop_toBottomOf="@id/other_settings_label">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/contact_us_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_large"
                android:text="@string/contact_us"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/margin_large"
                android:layout_marginEnd="@dimen/margin_large"
                android:background="@color/divider_thin" />

            <TextView
                android:id="@+id/logout_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_large"
                android:text="@string/log_out"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body1"
                android:textColor="@color/white" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>